--- a/group.html
+++ b/group.html
@@ -92,8 +92,8 @@
 
   <li style="margin-bottom: 1ex;"><b><a href="https://robblanco.github.io/">Roberto Blanco</a></b>
   <ul>
-    <li style="margin-top: 1ex;">Visitor at <a href="https://www.mpi-sp.org/">MPI-SP</a>, from 2025-05 to 2025-10
-    </li>
+    <!-- <li style="margin-top: 1ex;">Visitor at <a href="https://www.mpi-sp.org/">MPI-SP</a>, from 2025-05 to 2025-10 -->
+    <!-- </li> -->
     <li style="margin-top: 1ex;">Postdoctoral Researcher at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2020-05 to 2025-04<br/>
     <a href="https://secure-compilation.github.io">Formally Secure Compilation</a> and Formal Methods for Side-Channel Secure Hardware
     </li>
@@ -127,7 +127,7 @@
   </div>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://github.com/sharwig">Sebastian Harwig</a></b>
+  <li style="margin-bottom: 1ex;"><b><a href="https://dblp.org/pid/399/5326.html">Sebastian Harwig</a></b>
   <ul>
     <li style="margin-top: 1ex;">Teaching Assistant Student at RUB and <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2024-10 to 2025-03:<br/>
     <a href="https://moodle.ruhr-uni-bochum.de/course/view.php?id=60387">Proofs are Programs</a> course at RUB.
