--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://fstar-lang.org">F*: Verification Language for Effectful Programs</a></b>
-(<!-- <a href="https://catalin-hritcu.github.io/students/topics/2025/fstar-mpri-2025.pdf">topics</a>;
---><a href="https://github.com/FStarLang/FStar">code</a>;
+(<a href="https://catalin-hritcu.github.io/students/topics/2025/fstar-mpri-2025.pdf">topics</a>;
+ <a href="https://github.com/FStarLang/FStar">code</a>;
  <a href="https://fstar-lang.org/index.html#research">papers</a>)
     <!-- <ul> -->
     <!--   <li> -->
