--- a/index.html
+++ b/index.html
@@ -99,18 +99,6 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
  <a href="http://arxiv.org/abs/2502.03203">paper</a>;
  <a href="https://github.com/secure-compilation/fslh-rocq">code</a>)
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://secure-compilation.github.io/">ERC SECOMP:
-                                       Formally Secure Compilation</a></b>
-(<a href="https://catalin-hritcu.github.io/students/topics/2024/secomp-topics-2024.pdf">topics</a>;
- <a href="https://github.com/secure-compilation">code</a>;
- <a href="https://secure-compilation.github.io/#publications">papers</a>)
-    <!-- <ul> -->
-    <!--   <li> -->
-    <!--   <b>Currently looking for <a href="https://secure-compilation.github.io/#positions">an exceptional Post-Doctoral Researcher on this project</a></b> -->
-    <!--   <\!-- for Research Internship, PhD Student, PostDoc, and Research Engineer positions at Inria Paris -\-></li> -->
-    <!-- </ul> -->
-  </li>
-
   <li style="margin-bottom: 1ex;"><b><a href="https://fstar-lang.org">F*: Verification Language for Effectful Programs</a></b>
 (<a href="https://catalin-hritcu.github.io/students/topics/2025/fstar-mpri-2025.pdf">topics</a>;
  <a href="https://github.com/FStarLang/FStar">code</a>;
@@ -121,6 +109,20 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
     <!--   <\!-- for Research Internship, PhD Student, PostDoc, and Research Engineer positions at Inria Paris -\-></li> -->
     <!-- </ul> -->
   </li>
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://secure-compilation.github.io/">ERC SECOMP:
+                                       Formally Secure Compilation for Compartmentalized Programs</a></b>
+(<a href="https://catalin-hritcu.github.io/students/topics/2024/secomp-topics-2024.pdf">topics</a>;
+ <a href="https://github.com/secure-compilation">code</a>;
+ <a href="https://secure-compilation.github.io/#publications">papers</a>)
+    <!-- <ul> -->
+    <!--   <li> -->
+    <!--   <b>Currently looking for <a href="https://secure-compilation.github.io/#positions">an exceptional Post-Doctoral Researcher on this project</a></b> -->
+    <!--   <\!-- for Research Internship, PhD Student, PostDoc, and Research Engineer positions at Inria Paris -\-></li> -->
+    <!-- </ul> -->
+  </li>
+
+
   <!-- <li style="margin-bottom: 1ex;"><a href="https://catalin-hritcu.github.io/students/topics/2016/quick-chick.pdf">Dependable Property-Based Testing</a></a> -->
   <!-- (<a href="https://catalin-hritcu.github.io/students/topics/2016/quick-chick.pdf">topics</a>; -->
   <!--  <a href="https://arxiv.org/abs/1409.0393">paper #1</a>, -->
