--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
  <a href="https://github.com/FStarLang/FStar">code</a>;
  <a href="https://fstar-lang.org/index.html#research">papers</a>)
     <!-- <ul> -->
-    <!--   <li> -->
+    <!--   <li> --> 
     <!--   <b>Currently looking for a Master's (M2) intern who can continue with a PhD</a></b> -->
     <!--   <\!-- for Research Internship, PhD Student, PostDoc, and Research Engineer positions at Inria Paris -\-></li> -->
     <!-- </ul> -->
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://secure-compilation.github.io/">ERC SECOMP:
-                                       Formally Secure Compilation for Compartmentalized Programs</a></b>
+                                       Formally Secure Compilation for Compartmentalized Programs</a></b><br/>
 (<a href="https://catalin-hritcu.github.io/students/topics/2024/secomp-topics-2024.pdf">topics</a>;
  <a href="https://github.com/secure-compilation">code</a>;
  <a href="https://secure-compilation.github.io/#publications">papers</a>)
