--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@ I am very fortunate to work with a group of outstanding students and starting re
     Exequiel Rivas, and
     Théo Winterhalter.
     <b><a href="http://arxiv.org/abs/2503.00404">SecRef*: Securely Sharing Mutable References Between Verified and Unverified Code in F*</a></b>.
-    To appear in PACMPL, 9(<a href="https://icfp25.sigplan.org/">ICFP</a>). October 2025.
+    PACMPL, 9(<a href="https://icfp25.sigplan.org/">ICFP</a>). October 2025.
     <ul style="font-size: small">
       <li><a href="https://github.com/andricicezar/fstar-io/tree/master/state">F* development</a></li>
     </ul>
