--- a/index.html
+++ b/index.html
@@ -611,6 +611,14 @@ I am very fortunate to work with a group of outstanding students and starting re
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Basile Schlosser,
+    Jérémy Thibault, and
+    C&#259;t&#259;lin Hri&#539;cu.
+    <b><a href="">Blame-aware Recomposition for Formally Secure Low-level Compiler Backends (Extended Abstract)</a></b>.
+    Draft from November 2025.
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Cezar-Constantin Andrici,
     Danel Ahman,
     C&#259;t&#259;lin Hri&#539;cu,
