--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@ I am very fortunate to work with a group of outstanding students and starting re
     Basile Schlosser,
     Jérémy Thibault, and
     C&#259;t&#259;lin Hri&#539;cu.
-    <b><a href="">Blame-aware Recomposition for Formally Secure Low-level Compiler Backends (Extended Abstract)</a></b>.
+    <b><a href="">Blame-aware Recomposition for Formally Secure Low-level Compiler Backends <!-- (Extended Abstract) --></a></b>.
     To be presented at PriSC'26.
     <!-- Draft from November 2025. -->
   </li>
