--- a/publications.html
+++ b/publications.html
@@ -820,6 +820,15 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 <ol start="56" style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Basile Schlosser,
+    Jérémy Thibault, and
+    C&#259;t&#259;lin Hri&#539;cu.
+    <b><a href="https://popl26.sigplan.org/details/prisc-2026-papers/2/Blame-aware-Recomposition-for-Formally-Secure-Low-level-Compiler-Backends">Blame-aware Recomposition for Formally Secure Low-level Compiler Backends <!-- (Extended Abstract) --></a></b>.
+    To be presented at PriSC'26.
+    <!-- Draft from November 2025. -->
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Cezar-Constantin Andrici,
     Danel Ahman,
     C&#259;t&#259;lin Hri&#539;cu,
