--- a/publications.html
+++ b/publications.html
@@ -690,7 +690,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
 
 <h3>Books</h3>
 <ol start="45" style="width:42em; text-align: left">
-  <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#539;cu. <b><a href="https://mpi-sp-foe-2025.github.io/book-secf/">Software Foundations: Security Foundations</a></b>, Draft textbook, October 2025.</li>
+  <li style="margin-bottom: 1ex;">C&#259;t&#259;lin Hri&#539;cu and Yonghyun Kim. <b><a href="https://mpi-sp-foe-2025.github.io/book-secf/">Software Foundations: Security Foundations</a></b>, Draft textbook, October 2025.</li>
   <li style="margin-bottom: 1ex;">Benjamin C. Pierce, Arthur Azevedo de Amorim, Chris Casinghino, Marco Gaboardi, Michael Greenberg, C&#259;t&#259;lin Hri&#539;cu, Vilhelm Sj&ouml;berg, and Brent Yorgey. <b><a href="https://softwarefoundations.cis.upenn.edu/lf-current/index.html">Software Foundations: Logical Foundations</a></b>, Electronic textbook, August 2018.</li>
   <li style="margin-bottom: 1ex;">Benjamin C. Pierce, Arthur Azevedo de Amorim, Chris Casinghino, Marco Gaboardi, Michael Greenberg, C&#259;t&#259;lin Hri&#539;cu, Vilhelm Sj&ouml;berg, Andrew Tolmach, and Brent Yorgey. <b><a href="https://softwarefoundations.cis.upenn.edu/plf-current/index.html">Software Foundations: Programming Language Foundations</a></b>, Electronic textbook, August 2018.</li>
 </ol>
