--- a/index.html
+++ b/index.html
@@ -143,6 +143,10 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><b><a href="https://softwarefoundations.cis.upenn.edu/secf-current">Security Foundations</a></b> was released as the
+  7th volume of the <a href="https://softwarefoundations.cis.upenn.edu">Software Foundations</a> textbook series in Jan 2026.
+  This volume originates from <a href="#teaching">courses</a> we are teaching at Ruhr Uni Bochum </li>
+
   <li style="margin-bottom: 1ex;"><b>Distinguished Paper Award at <a href="https://www.ieee-security.org/TC/CSF2025">CSF 2025</a></b> for <br/>
   <a href="http://arxiv.org/abs/2502.03203">FSLH: Flexible Mechanized Speculative Load Hardening</a>
   </li>
@@ -838,7 +842,7 @@ of <a href="https://www.ruhr-uni-bochum.de/en">RUB</a>:
 <p style="width:42em; text-align: left"> Co-author of 3 volumes of the <a href="https://softwarefoundations.cis.upenn.edu/">Software Foundations</a> textbook:
     <a href="https://softwarefoundations.cis.upenn.edu/lf-current/index.html">Logical Foundations</a>,
     <a href="https://softwarefoundations.cis.upenn.edu/plf-current/index.html">Programming Language Foundations</a>, and
-    <b><a href="https://mpi-sp-foe-2025.github.io/book-secf/">Security Foundations</a> (draft, main author)</b>.</p>
+    <b><a href="https://softwarefoundations.cis.upenn.edu/secf-current">Security Foundations</a> (main author)</b>.</p>
 
 <p>Here are my recent courses. For a complete list of my teaching please look <a href="teaching.html">here</a>.
 
@@ -852,8 +856,8 @@ of <a href="https://www.ruhr-uni-bochum.de/en">RUB</a>:
   (previously: <a href="https://moodle.ruhr-uni-bochum.de/course/view.php?id=51278">Summer 2023</a>)
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://moodle.ruhr-uni-bochum.de/enrol/index.php?id=57071">Functional Programming</a></b> course at <a href="https://informatik.rub.de/en/">Ruhr Uni Bochum</a>, April--July 2024</a>
-  (more recently: <a href="https://moodle.ruhr-uni-bochum.de/enrol/index.php?id=67107">Winter 2025-26</a>)
+  <li style="margin-bottom: 1ex;"><b><a href="https://moodle.ruhr-uni-bochum.de/enrol/index.php?id=57071">Functional Programming</a></b> course at <a href="https://informatik.rub.de/en/">Ruhr Uni Bochum</a>, April--July 2024</a><br/>
+  (more recently without my participation: <a href="https://moodle.ruhr-uni-bochum.de/enrol/index.php?id=67107">Winter 2025-26</a>)
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="teaching/lyon2019/">Writing and Verifying Functional Programs in Coq</a></b> course at <br/><a href="http://www.mathinfoly.org">Summer School on Cryptography, Blockchain, and Program Verification, Mathinfoly 2019</a>,<br/> 24-31 August 2019 at INSA, Lyon, France</a>
