--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
 
   <li style="margin-bottom: 1ex;"><b><a href="https://softwarefoundations.cis.upenn.edu/secf-current">Security Foundations</a></b> was released as the
   7th volume of the <a href="https://softwarefoundations.cis.upenn.edu">Software Foundations</a> textbook series in Jan 2026.
-  This volume originates from <a href="#teaching">courses</a> we are teaching at Ruhr Uni Bochum </li>
+  This volume originates from <a href="#teaching">courses</a> we are teaching at Ruhr Uni Bochum.</li>
 
   <li style="margin-bottom: 1ex;"><b>Distinguished Paper Award at <a href="https://www.ieee-security.org/TC/CSF2025">CSF 2025</a></b> for <br/>
   <a href="http://arxiv.org/abs/2502.03203">FSLH: Flexible Mechanized Speculative Load Hardening</a>
