--- a/index.html
+++ b/index.html
@@ -145,7 +145,12 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
 
   <li style="margin-bottom: 1ex;"><b><a href="https://softwarefoundations.cis.upenn.edu/secf-current">Security Foundations</a></b> was released as the
   7th volume of the <a href="https://softwarefoundations.cis.upenn.edu">Software Foundations</a> textbook series in Jan 2026.
-  This volume originates from <a href="#teaching">courses</a> we are teaching at Ruhr Uni Bochum.</li>
+  This volume originates from <a href="#teaching">courses</a> we are teaching at Ruhr Uni Bochum.
+  <ul>
+  <li><a href="https://listserv.iit.cnr.it/cgi-bin/wa?A2=SECURITY;17a2f51b.2601&FT=M&P=&H=&S=">announcement</a>,
+    <a href="talks/2026-01-11-Security-Foundations-PriSC.pdf">slides</a></li>
+  </ul>
+  </li>
 
   <li style="margin-bottom: 1ex;"><b>Distinguished Paper Award at <a href="https://www.ieee-security.org/TC/CSF2025">CSF 2025</a></b> for <br/>
   <a href="http://arxiv.org/abs/2502.03203">FSLH: Flexible Mechanized Speculative Load Hardening</a>
@@ -795,6 +800,13 @@ I am very fortunate to work with a group of outstanding students and starting re
 <p>Here are my recent and upcoming talks. For a complete list of my talks please look <a href="talks.html">here</a>.</p>
 
 <ul style="width:42em; text-align: left">
+
+  <li style="margin-bottom: 1ex;"><em>Announcing Security Foundations</em>
+    <ul style="font-size: small">
+    <li><b>Recent:</b> Short talk at the <a href="https://popl26.sigplan.org/home/prisc-2026">PriSC</a> workshop:
+      <a href="https://softwarefoundations.cis.upenn.edu/secf-current">Security Foundations</a>; <a href="talks/2026-01-11-Security-Foundations-PriSC.pdf">slides</a> (2026-01-11)</li>
+    </ul>
+  </li>
 
   <li style="margin-bottom: 1ex;"><em>My Group's Journey in Secure Compilation</em></a>
     <ul style="font-size: small">
