--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/CSFWweb/index.html">Computer Security Foundations</a>, CSF</b> (<b>Steering Committee Member</b> since 2024, <b>Test-of-Time Awards Chair</b> in <a href="https://csf2023.ieee-security.org">2023</a> and <a href="https://csf2024.ieee-security.org/">2024</a>; also PC Member in <a href="https://www.ieee-security.org/TC/CSF2020/">2020</a>, <a href="https://www.ieee-security.org/TC/CSF2021/">2021</a> and <a href="https://csf2024.ieee-security.org/">2024</a>)
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.ieee-security.org/CSFWweb/index.html">Computer Security Foundations</a>, CSF</b> (<b>Steering Committee Member</b> since 2024,<br/>
+    <b>Test-of-Time Awards Chair</b> in <a href="https://csf2023.ieee-security.org">2023</a> and <a href="https://csf2024.ieee-security.org/">2024</a>; also PC Member in <a href="https://www.ieee-security.org/TC/CSF2020/">2020</a>, <a href="https://www.ieee-security.org/TC/CSF2021/">2021</a> and <a href="https://csf2024.ieee-security.org/">2024</a>)
   <ul>
   <li><a href="https://csf2026.ieee-security.org">CSF 2026</a> submission deadlines: <strike>24 July 2025, 9 October 2025,</strike> 29 January 2026</li>
   <li><a href="https://csf2026.ieee-security.org/">CSF 2026</a>: July 26-29, Lisbon, Portugal (collocated with <a href="https://www.floc26.org/">FLoC 2026</a>)</li>
@@ -183,7 +184,10 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/series/prisc"><!-- Workshop on --> Principles of Secure Compilation</a>, PriSC</b> (<b>Steering Committee Chair</b> 2019--2023, <b>Steering Committee Member</b> since 2023, also <b>PC Chair</b> in <a href="https://popl18.sigplan.org/track/prisc-2018">2018</a>)
+  <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/series/prisc"><!-- Workshop on --> Principles of Secure Compilation</a>, PriSC</b>
+    (<b>Steering Committee Chair</b> 2019--2023,<br/>
+    <b>Steering Committee Member</b> since 2023,
+    and <b>PC Chair</b> in <a href="https://popl18.sigplan.org/track/prisc-2018">2018</a>)
   <!-- <ul> -->
   <!-- <li><a href="https://popl26.sigplan.org/home/prisc-2026">PriSC 2026</a> deadline: 2 November 2025</li> -->
   <!-- <li><a href="https://popl26.sigplan.org/home/prisc-2026">PriSC 2026</a> workshop: around 11 January 2026, Rennes, France (with <a href="https://popl26.sigplan.org/">POPL</a>)</li> -->
