--- a/index.html
+++ b/index.html
@@ -143,6 +143,10 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
 <h2>News/Events</h2>
 <ul style="width:42em; text-align: left">
 
+  <li style="margin-bottom: 1ex;"><b>Most Influential POPL Paper Award</b> from SIGPLAN in Jan 2026 for <br/>
+  <a href="https://dl.acm.org/doi/10.1145/2837614.2837655">Dependent Types and Multi-monadic Effects in F*</a> from POPL 2016.
+  </li>
+
   <li style="margin-bottom: 1ex;"><b><a href="https://softwarefoundations.cis.upenn.edu/secf-current">Security Foundations</a></b> was released as the
   7th volume of the <a href="https://softwarefoundations.cis.upenn.edu">Software Foundations</a> textbook series in Jan 2026.
   This volume originates from <a href="#teaching">courses</a> we are teaching at Ruhr Uni Bochum.
@@ -151,6 +155,7 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
     <a href="talks/2026-01-11-Security-Foundations-PriSC.pdf">slides</a></li>
   </ul>
   </li>
+
 
   <li style="margin-bottom: 1ex;"><b>Distinguished Paper Award at <a href="https://www.ieee-security.org/TC/CSF2025">CSF 2025</a></b> for <br/>
   <a href="http://arxiv.org/abs/2502.03203">FSLH: Flexible Mechanized Speculative Load Hardening</a>
@@ -239,15 +244,15 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
 
   <li style="margin-bottom: 1ex;"><b><a href="https://mtzguido.github.io">Guido Martínez</a></b>, co-supervised <!-- PhD --> student at CIFASIS-CONICET and UNR, Argentina, started as a Research Software Engineer at <a href="https://www.microsoft.com/en-us/research/group/research-software-engineering-rise/">Microsoft Research in Redmond</a> in Jan 2023.</li>
 
-  <li style="margin-bottom: 1ex;">
-    <b><a href="https://popl24.sigplan.org/series/POPL">Principles of Programming Languages</a>, POPL</b>
-    (<b>Artifact Evaluation Chair</b> in <a href="https://popl18.sigplan.org/">2018</a> and <a href="https://popl19.sigplan.org/">2019</a>;
-     also PC Member in <a href="https://popl17.sigplan.org/">2017</a> and <a href="https://popl24.sigplan.org">2024</a>)
-  <ul>
-  <!-- <li><a href="https://popl26.sigplan.org/">POPL 2026</a> submission deadline: 10 July 2025</li> -->
-  <!-- <li>Early registration deadline: 14 December 2023</li> -->
-  <li><a href="https://popl26.sigplan.org/">POPL 2026</a> symposium: 11-17 January 2026, Rennes, France</ul>
-  </li>
+  <!-- <li style="margin-bottom: 1ex;"> -->
+  <!--   <b><a href="https://popl24.sigplan.org/series/POPL">Principles of Programming Languages</a>, POPL</b> -->
+  <!--   (<b>Artifact Evaluation Chair</b> in <a href="https://popl18.sigplan.org/">2018</a> and <a href="https://popl19.sigplan.org/">2019</a>; -->
+  <!--    also PC Member in <a href="https://popl17.sigplan.org/">2017</a> and <a href="https://popl24.sigplan.org">2024</a>) -->
+  <!-- <ul> -->
+  <!-- <\!-- <li><a href="https://popl26.sigplan.org/">POPL 2026</a> submission deadline: 10 July 2025</li> -\-> -->
+  <!-- <\!-- <li>Early registration deadline: 14 December 2023</li> -\-> -->
+  <!-- <li><a href="https://popl26.sigplan.org/">POPL 2026</a> symposium: 11-17 January 2026, Rennes, France</ul> -->
+  <!-- </li> -->
 
   <!-- <li style="margin-bottom: 1ex;"><b><a href="https://dblp.org/pers/hd/a/Abate:Carmine">Carmine Abate</a></b>, graduated PhD student I supervised at -->
   <!-- MPI-SP<\!-- (and before that Inria Paris) -\->, took a Formal Verification Researcher position at the <a href="https://www.barkhauseninstitut.org">Barkhausen Institut</a> in Dresden, starting in May 2022.</li> -->
