--- a/publications.html
+++ b/publications.html
@@ -421,6 +421,7 @@
     Santiago Zanella-B&eacute;guelin.
     <b><a href="https://fstar-lang.org/papers/mumon/">Dependent Types and Multi-Monadic Effects in F*</a></b>.
     In 43rd ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages (POPL), pages 256-270, January 2016.
+    <b>Most Influential POPL Paper Award</b>.
   <ul style="font-size: small">
     <!-- <li>A draft of the paper was entitled <a href="https://fstar-lang.org/papers/icfp2015/">Semantic Purity and Effects Reunited in F*</a></li> -->
   </ul>
