--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
 
   <li style="margin-bottom: 1ex;">
     <b><a href="https://sp2026.ieee-security.org">IEEE Symposium on Security and Privacy</a></b>
-    (<b>Associate PC Chair</b> in <a href="https://sp2026.ieee-security.org">2026</a>,
-     <br/>also PC Member in <a href="https://www.ieee-security.org/TC/SP2021/">2020</a>)
+    (<b>Associate PC Chair</b> in <a href="https://sp2026.ieee-security.org">2026</a>)
+     <!-- <br/>and PC Member in <a href="https://www.ieee-security.org/TC/SP2021/">2020</a> -->
   <ul>
   <!-- <li><a href="https://sp2026.ieee-security.org">IEEE SP 2026</a> abstract deadlines: <strike>29 May 2025 and</strike> 6 November 2025</li> -->
   <!-- <li><a href="https://sp2026.ieee-security.org">IEEE SP 2026</a> submission deadlines: <strike>5 June 2025 and</strike> 13 November 2025</li> -->
@@ -180,18 +180,18 @@ and also a Habilitation from <a href="https://www.di.ens.fr/set_english">ENS Par
   </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://www.sigplan.org/Conferences/CPP/"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP</b> (<b>Steering Committee Chair</b> since 2021;<br/> also <b>PC Chair and Conference Chair</b> in <a href="https://popl20.sigplan.org/home/CPP-2020">2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a>; also PC member in <a href="https://people.csail.mit.edu/adamc/cpp16/">2016</a>)
+  <li style="margin-bottom: 1ex;"><b><a href="https://www.sigplan.org/Conferences/CPP/"><!-- International Conference on--> Certified Programs and Proofs</a>, CPP</b> (<b>Steering Committee Chair</b> since 2021;<br/> <b>PC Chair and Conference Chair</b> in <a href="https://popl20.sigplan.org/home/CPP-2020">2020</a> and <a href="https://popl21.sigplan.org/home/CPP-2021">2021</a>; also PC member in <a href="https://people.csail.mit.edu/adamc/cpp16/">2016</a>)
 <!-- https://popl24.sigplan.org/series/CPP -->
   <ul>
   <!-- <li><a href="https://popl26.sigplan.org/home/CPP-2026">CPP 2026</a> abstract deadline: 5 September 2025</li> -->
   <!-- <li><a href="https://popl26.sigplan.org/home/CPP-2026">CPP 2026</a> submission deadline: 12 September 2025</li> -->
-  <li><a href="https://popl26.sigplan.org/home/CPP-2026">CPP 2026</a> conference: 12-13 January 2026, Rennes, France (with <a href="https://popl26.sigplan.org">POPL</a>)</li>
+  <li><a href="https://www.sigplan.org/Conferences/CPP/">CPP 2027</a> conference: January 2027, Mexico City (with <a href="https://www.sigplan.org/Conferences/POPL/">POPL</a>)</li>
   </ul>
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://popl23.sigplan.org/series/prisc"><!-- Workshop on --> Principles of Secure Compilation</a>, PriSC</b>
-    (<b>Steering Committee Chair</b> 2019--2023,<br/>
-    <b>Steering Committee Member</b> since 2023,
+    (<b>Steering Committee Member</b> since 2023,
+    <b>Steering Committee Chair</b> 2019--2023,
     and <b>PC Chair</b> in <a href="https://popl18.sigplan.org/track/prisc-2018">2018</a>)
   <!-- <ul> -->
   <!-- <li><a href="https://popl26.sigplan.org/home/prisc-2026">PriSC 2026</a> deadline: 2 November 2025</li> -->
