--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@ I am very fortunate to work with a group of outstanding students and starting re
     <b><a href="http://arxiv.org/abs/2401.16277">SECOMP: Formally Secure Compilation of Compartmentalized C Programs</a></b>.
     In <a href="https://www.sigsac.org/ccs/CCS2024/">31th ACM SIGSAC Conference on Computer and Communications Security (CCS)</a>, pages 1061–1075. ACM, October 2024.
     <ul style="font-size: small">
-      <li><a href="https://github.com/secure-compilation/CompCert">Coq development</a></li>
+      <li><a href="https://github.com/secure-compilation/CompCert">Rocq development</a></li>
       <li><a href="publications/SECOMP2CHERI-PriSC23.pdf">An extended abstract</a> about this work was presented at
           <a href="https://popl23.sigplan.org/home/prisc-2023">PriSC'23</a></li>
     </ul>
@@ -771,7 +771,7 @@ I am very fortunate to work with a group of outstanding students and starting re
     <b><a href="https://eprint.iacr.org/2023/185">The Last Yard: Foundational End-to-End Verification of High-Speed Cryptography</a></b>.
     In <a href="https://popl24.sigplan.org/home/CPP-2024">13th ACM SIGPLAN International Conference on Certified Programs and Proofs (CPP)</a>, pages 30–44. ACM, January 2024.
     <ul style="font-size: small">
-      <li><a href="https://github.com/SSProve/ssprove-jasmin">Coq development</a></li>
+      <li><a href="https://github.com/SSProve/ssprove-jasmin">Rocq development</a></li>
     </ul>
   </li>
 
@@ -791,7 +791,7 @@ I am very fortunate to work with a group of outstanding students and starting re
     <ul style="font-size: small">
       <li><a href="https://eprint.iacr.org/2021/397/20210526:113037">Conference version</a> won <b>Distinguished Paper Award</b>
           at <a href="https://www.ieee-security.org/TC/CSF2021">CSF 2021</a></li>
-      <li><a href="https://github.com/SSProve/ssprove">Coq development</a></li>
+      <li><a href="https://github.com/SSProve/ssprove">Rocq development</a></li>
       <li><a href="https://youtu.be/MlwQ7CfNH5Q">CSF 2021 presentation video</a> and
           <a href="https://www.ieee-security.org/TC/CSF2021/slides/session-10-paper-120-Haselwarter.pdf">slides</a>;
           <a href="https://youtu.be/uYhItPhA-Y8">Coq Workshop 2021 presentation</a>; and
