--- a/publications.html
+++ b/publications.html
@@ -79,7 +79,7 @@
     <b><a href="http://arxiv.org/abs/2401.16277">SECOMP: Formally Secure Compilation of Compartmentalized C Programs</a></b>.
     In <a href="https://www.sigsac.org/ccs/CCS2024/">31th ACM SIGSAC Conference on Computer and Communications Security (CCS)</a>, pages 1061–1075. ACM, October 2024.
     <ul style="font-size: small">
-      <li><a href="https://github.com/secure-compilation/CompCert">Coq development</a></li>
+      <li><a href="https://github.com/secure-compilation/CompCert">Rocq development</a></li>
       <li><a href="publications/SECOMP2CHERI-PriSC23.pdf">An extended abstract</a> about this work was presented at
           <a href="https://popl23.sigplan.org/home/prisc-2023">PriSC'23</a></li>
     </ul>
@@ -112,7 +112,7 @@
     <b><a href="https://eprint.iacr.org/2023/185">The Last Yard: Foundational End-to-End Verification of High-Speed Cryptography</a></b>.
     In <a href="https://popl24.sigplan.org/home/CPP-2024">13th ACM SIGPLAN International Conference on Certified Programs and Proofs (CPP)</a>, pages 30–44. ACM, January 2024.
     <ul style="font-size: small">
-      <li><a href="https://github.com/SSProve/ssprove-jasmin">Coq development</a></li>
+      <li><a href="https://github.com/SSProve/ssprove-jasmin">Rocq development</a></li>
     </ul>
   </li>
 
@@ -128,7 +128,7 @@
     IEEE Computer Security Foundations Symposium (CSF)</a>.
     August 2022.
     <ul style="font-size: small">
-      <li><a href="https://github.com/secure-compilation/SecurePtrs">Coq development</a></li>
+      <li><a href="https://github.com/secure-compilation/SecurePtrs">Rocq development</a></li>
     </ul>
   </li>
 
@@ -147,7 +147,7 @@
     <b>Distinguished Paper Award</b>.
     <ul style="font-size: small">
       <li>Superseded by journal paper with the same name, see <a href="#journal">below</a>.</li>
-      <li><a href="https://github.com/SSProve/ssprove">Coq development</a></li>
+      <li><a href="https://github.com/SSProve/ssprove">Rocq development</a></li>
       <li><a href="https://youtu.be/MlwQ7CfNH5Q">CSF 2021 presentation video</a> and
           <a href="https://www.ieee-security.org/TC/CSF2021/slides/session-10-paper-120-Haselwarter.pdf">slides</a>;
           <a href="https://youtu.be/uYhItPhA-Y8">Coq Workshop 2021 presentation</a>; and
@@ -182,7 +182,7 @@
     In <a href="https://www.etaps.org/2020/esop">29th European Symposium on Programming (ESOP)</a>, pages 1--28. Springer, April 2020.
     <b>Nominated for <a href="https://etaps.org/awards/best-paper/">EATCS Award</a> for the best ETAPS 2020 paper in theoretical computer science</b>.
     <ul style="font-size: small">
-      <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation/tree/different_traces">Coq development</a></li>
+      <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation/tree/different_traces">Rocq development</a></li>
       <li>Superseded by journal paper entitled "An Extended Account of Trace-relating Compiler Correctness and Secure Compilation", see <a href="#journal">below</a>.</li>
     </ul>
   </li>
@@ -229,7 +229,7 @@
     IEEE Computer Security Foundations Symposium (CSF)</a>, pages 256--271. June 2019.
     <b>Distinguished Paper Award</b>.
     <ul style="font-size: small">
-      <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation">Coq development</a>
+      <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation">Rocq development</a>
       <li>A previous extended abstract was called
           <a href="https://arxiv.org/abs/1710.07309">Robust hyperproperty preservation for secure compilation</a></li>
     </ul>
@@ -268,7 +268,7 @@
            Formally Secure Compilation Despite Dynamic Compromise</a></b>.
            In <a href="https://ccs2018.sigsac.org/">25th ACM Conference on Computer and Communications Security (CCS)</a>, pages 1351--1368, ACM. October 2018.
     <ul style="font-size: small">
-      <li><a href="https://github.com/secure-compilation/when-good-components-go-bad">Coq development</a>
+      <li><a href="https://github.com/secure-compilation/when-good-components-go-bad">Rocq development</a>
       <li>A previous extended abstract was called
           <a href="https://arxiv.org/abs/1710.07308">Formally Secure Compilation of Unsafe Low-Level Components</a></li>
     </ul>
@@ -605,7 +605,7 @@
     <ul style="font-size: small">
       <li><a href="https://eprint.iacr.org/2021/397/20210526:113037">Conference version</a> won <b>Distinguished Paper Award</b>
           at <a href="https://www.ieee-security.org/TC/CSF2021">CSF 2021</a></li>
-      <li><a href="https://github.com/SSProve/ssprove">Coq development</a></li>
+      <li><a href="https://github.com/SSProve/ssprove">Rocq development</a></li>
       <li><a href="https://youtu.be/MlwQ7CfNH5Q">CSF 2021 presentation video</a> and
           <a href="https://www.ieee-security.org/TC/CSF2021/slides/session-10-paper-120-Haselwarter.pdf">slides</a>;
           <a href="https://youtu.be/uYhItPhA-Y8">Coq Workshop 2021 presentation</a>; and
@@ -627,7 +627,7 @@
     <b><a href="https://doi.org/10.1145/3460860">An Extended Account of Trace-Relating Compiler Correctness and Secure Compilation</a></b>.
     ACM Transactions on Programming Languages and Systems (TOPLAS). Volume 43, Issue 4, pages 1-48. ACM, December 2021.
     <ul style="font-size: small">
-      <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation/tree/different_traces">Coq development</a></li>
+      <li><a href="https://github.com/secure-compilation/exploring-robust-property-preservation/tree/different_traces">Rocq development</a></li>
     </ul>
   </li>
 
@@ -877,7 +877,7 @@ Special Issue on Verified Information Flow Security, 24(6):689--734, December 20
     Extended abstract of presentation at the <a href="https://types22.inria.fr/">28th International Conference on Types for Proofs and Programs (TYPES 2022)</a>.
     June 2022.
     <ul style="font-size: small">
-      <li><a href="https://github.com/TheoWinterhalter/pdm4all">Coq development</a></li>
+      <li><a href="https://github.com/TheoWinterhalter/pdm4all">Rocq development</a></li>
     </ul>
   </li>
 
