--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@ I am very fortunate to work with a group of outstanding students and starting re
 
   <li style="margin-bottom: 1ex;"><a href="https://sf.snu.ac.kr/yonghyun.kim/">Yonghyun Kim</a> (Postdoctoral Researcher, MPI-SP)</li>
 
-  <li style="margin-bottom: 1ex;"><a href="https://www.linkedin.com/in/abigail-pribisova/">Abigail Pribisova</a> (Research Immersion Lab, <a href="https://www.cis.mpg.de/csmaxplanck-overview/">cs@max planck</a> student)</li>
+  <li style="margin-bottom: 1ex;"><a href="https://www.linkedin.com/in/abigail-pribisova/">Abigail Pribisova</a> (Research Immersion Lab, <a href="https://www.cis.mpg.de/csmaxplanck-overview/">cs@max planck</a> PhD student)</li>
 
   <li style="margin-bottom: 1ex;"><a href="http://jerem.yt/">Jérémy Thibault</a> (Visitor and Graduated PhD Student, MPI-SP; PostDoc at EPFL)</li>
 </ul>
