--- a/teaching.html
+++ b/teaching.html
@@ -22,9 +22,32 @@
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b>Upcoming: <a href="https://catalin-hritcu.github.io/teaching/epit2018/">Program Verification with F*</a></b> course at <a href="http://resources.mpi-inf.mpg.de/departments/rg1/conferences/vtsa19/">Summer School on <br/>Verification Technology, Systems, and Applications, VSTA 2019</a>,<br/> 1-5 July 2019 at University of Luxembourg</li>
+  <li id="foe" style="margin-bottom: 1ex;"><b>Recent: <a href="https://moodle.ruhr-uni-bochum.de/enrol/index.php?id=62598&lang=en">Foundations of Programming Languages, Verification, and Security</a></b> course at <a href="https://informatik.rub.de/en/">Ruhr Uni Bochum</a>, April--July 2025</a>
+  (previously: <a href="https://moodle.ruhr-uni-bochum.de/enrol/index.php?id=54279&lang=en">Winter 2023--24</a>)
+    <ul style="font-size: small">
+      <li>External people can select "Access as a guest" to see the course description,
+        but one needs to "Create new account" to get to the video recordings and other materials on Moodle.</li>
+    </ul>
+  </li>
 
-  <li style="margin-bottom: 1ex;"><b>Recent: <a href="https://catalin-hritcu.github.io/teaching/fosad2018/">Formally Secure Compartmentalizing Compilation</a> course at<br/></b> <a href="http://www.sti.uniurb.it/events/fosad18/">International School on Foundations of Security Analysis and Design (FOSAD)</a>,<br/> 27-28 August, 2018, <a href="https://en.wikipedia.org/wiki/Bertinoro">Bertinoro, Italy</a>
+  <li id="pap" style="margin-bottom: 1ex;"><b>Recent: <a href="https://moodle.ruhr-uni-bochum.de/course/view.php?id=60387&lang=en">Proofs are Programs</a></b> course at <a href="https://informatik.rub.de/en/">Ruhr Uni Bochum</a>, October 2024--February 2025</a>
+  (previously: <a href="https://moodle.ruhr-uni-bochum.de/course/view.php?id=51278&lang=en">Summer 2023</a>)
+    <ul style="font-size: small">
+      <li>External people can select "Access as a guest" to see the course description,
+        but one needs to "Create new account" to get to the video recordings and other materials on Moodle.</li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://moodle.ruhr-uni-bochum.de/enrol/index.php?id=57071">Functional Programming</a></b> course at <a href="https://informatik.rub.de/en/">Ruhr Uni Bochum</a>, April--July 2024</a><br/>
+  (more recently without my participation: <a href="https://moodle.ruhr-uni-bochum.de/enrol/index.php?id=67107">Winter 2025-26</a>)
+  </li>
+
+  <li style="margin-bottom: 1ex;"><b><a href="teaching/lyon2019/">Writing and Verifying Functional Programs in Coq</a></b> course at <br/><a href="http://www.mathinfoly.org">Summer School on Cryptography, Blockchain, and Program Verification, Mathinfoly 2019</a>,<br/> 24-31 August 2019 at INSA, Lyon, France</a>
+  </li>
+
+  <li style="margin-bottom: 1ex;"><b><a href="teaching/vtsa2019/">Program Verification with F*</a></b> course at <a href="http://resources.mpi-inf.mpg.de/departments/rg1/conferences/vtsa19/">Summer School on <br/>Verification Technology, Systems, and Applications, VSTA 2019</a>,<br/> 1-5 July 2019 at University of Luxembourg</li>
+
+  <li style="margin-bottom: 1ex;"><b><a href="https://catalin-hritcu.github.io/teaching/fosad2018/">Formally Secure Compartmentalizing Compilation</a> course at<br/></b> <a href="http://www.sti.uniurb.it/events/fosad18/">International School on Foundations of Security Analysis and Design (FOSAD)</a>,<br/> 27-28 August, 2018, <a href="https://en.wikipedia.org/wiki/Bertinoro">Bertinoro, Italy</a>
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://catalin-hritcu.github.io/teaching/epit2018/">Program Verification with F*</a></b> course at<br/> <a href="http://projects.lsv.fr/epit18/?page_id=49">EPIT 2018 Software Verification Spring School</a>, 7-11 May, 2018, <a href="https://goo.gl/maps/rc7xBp9VQ7A2">Aussois, France</a></li>
