--- a/index.html
+++ b/index.html
@@ -865,12 +865,20 @@ of <a href="https://www.ruhr-uni-bochum.de/en">RUB</a>:
 
 <ul style="width:42em; text-align: left">
 
-  <li style="margin-bottom: 1ex;"><b>Recent: <a href="https://moodle.ruhr-uni-bochum.de/enrol/index.php?id=62598">Foundations of Programming Languages, Verification, and Security</a></b> course at <a href="https://informatik.rub.de/en/">Ruhr Uni Bochum</a>, April--July 2025</a>
-  (previously: <a href="https://moodle.ruhr-uni-bochum.de/enrol/index.php?id=54279">Winter 2023--24</a>)
+  <li id="foe" style="margin-bottom: 1ex;"><b>Recent: <a href="https://moodle.ruhr-uni-bochum.de/enrol/index.php?id=62598&lang=en">Foundations of Programming Languages, Verification, and Security</a></b> course at <a href="https://informatik.rub.de/en/">Ruhr Uni Bochum</a>, April--July 2025</a>
+  (previously: <a href="https://moodle.ruhr-uni-bochum.de/enrol/index.php?id=54279&lang=en">Winter 2023--24</a>)
+    <ul style="font-size: small">
+      <li>External people can select "Access as a guest" to see the course description,
+        but one needs to "Create new account" to get to the video recordings and other materials on Moodle.</li>
+    </ul>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b>Recent: <a href="https://moodle.ruhr-uni-bochum.de/course/view.php?id=60387">Proofs are Programs</a></b> course at <a href="https://informatik.rub.de/en/">Ruhr Uni Bochum</a>, October 2024--February 2025</a>
-  (previously: <a href="https://moodle.ruhr-uni-bochum.de/course/view.php?id=51278">Summer 2023</a>)
+  <li id="pap" style="margin-bottom: 1ex;"><b>Recent: <a href="https://moodle.ruhr-uni-bochum.de/course/view.php?id=60387&lang=en">Proofs are Programs</a></b> course at <a href="https://informatik.rub.de/en/">Ruhr Uni Bochum</a>, October 2024--February 2025</a>
+  (previously: <a href="https://moodle.ruhr-uni-bochum.de/course/view.php?id=51278&lang=en">Summer 2023</a>)
+    <ul style="font-size: small">
+      <li>External people can select "Access as a guest" to see the course description,
+        but one needs to "Create new account" to get to the video recordings and other materials on Moodle.</li>
+    </ul>
   </li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://moodle.ruhr-uni-bochum.de/enrol/index.php?id=57071">Functional Programming</a></b> course at <a href="https://informatik.rub.de/en/">Ruhr Uni Bochum</a>, April--July 2024</a><br/>
