--- a/group.html
+++ b/group.html
@@ -281,7 +281,7 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
     </li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
-  [Then PostDoc at LMF, Université Paris-Saclay]<br/>
+  <!-- [Then PostDoc at LMF, Université Paris-Saclay]<br/> -->
   [<b>Now Maître de Conférences (Associate Professor) at <a href="https://www.universite-paris-saclay.fr/en/education/master/computer-science">Université Paris-Saclay</a> and <a href="https://lmf.cnrs.fr/Main/HomePage?lang=en">LMF</a></b>]
   </div>  
   </li>
@@ -514,11 +514,13 @@ PhD student at <a href="http://web.fceia.unr.edu.ar/">National University of Ros
     </li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
-[MSc Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]
-[Then MSc student at <a href="http://www.math.univ-paris-diderot.fr/m2lmfi/">LMFI</a>]
-[Then PhD Student at  <a href="https://www.polytechnique.edu/en/department-of-computer-science">École Polytechnique</a>]
-[Then PostDoc at Institut de Mathématiques de Marseille (I2M)]
-[Then PostDoc at LIS at Aix-Marseille Université]
+[MSc Student at <a href="https://www.di.ens.fr/WebHome.html.en">ENS Paris</a> and <a href="https://wikimpri.dptinfo.ens-cachan.fr/doku.php">MPRI</a>]<br/>
+<!-- [Then MSc student at <a href="http://www.math.univ-paris-diderot.fr/m2lmfi/">LMFI</a>] -->
+<!-- [Then PhD Student at  <a href="https://www.polytechnique.edu/en/department-of-computer-science">École Polytechnique</a>] -->
+<!-- [Then PostDoc at Institut de Mathématiques de Marseille (I2M)] -->
+<!-- [Then PostDoc at LIS at Aix-Marseille Université] -->
+  [<b>Now Maître de Conférences (Associate Professor) at <a href="https://www.loria.fr/en/">Loria</a>
+      in the <a href="https://www.loria.fr/fr/la-recherche/les-equipes/mocqua/">MOCQUA team</a></b>]
 </div></li>
 
   <li style="margin-bottom: 1ex;"><b><a href="https://zoep.github.io/">Zoe Paraskevopoulou</a></b>
