--- a/group.html
+++ b/group.html
@@ -132,14 +132,15 @@
   </div>
   </li>
 
-  <li style="margin-bottom: 1ex;"><b><a href="https://dblp.org/pid/398/1897.html">Léon Ducruet</a></b>
+<!-- https://dblp.org/pid/398/1897.html -->
+  <li style="margin-bottom: 1ex;"><b><a href="https://pure.au.dk/portal/en/persons/l%C3%A9on-pierre-ducruet/">Léon Ducruet</a></b>
   <ul>
     <li style="margin-top: 1ex;">Research Intern at <a href="https://www.mpi-sp.org/">MPI-SP</a>, 2024-10 to 2025-02:<br/>
      <a href="http://arxiv.org/abs/2502.03203">FSLH: Flexible Mechanized Speculative Load Hardening</a>
     </li>
   </ul>
   <div style="font-size: small; margin-top: 0.5ex; margin-left: 3ex; margin-bottom: 1ex;">
-  [MSc Student at ENS Lyon] [Now intern at Aarhus University]
+  [MSc Student at ENS Lyon] [Now PhD student at Aarhus University]
   </div>
   </li>
 
