--- a/index.html
+++ b/index.html
@@ -627,6 +627,20 @@ I am very fortunate to work with a group of outstanding students and starting re
 <ul style="width:42em; text-align: left">
 
   <li style="margin-bottom: 1ex;">
+    Jonathan Baumann,
+    Yonghyun Kim,
+    Yan Farba,
+    C&#259;t&#259;lin Hri&#539;cu, and
+    Julay Leatherman-Brooks.
+    <b><a href="https://arxiv.org/abs/2601.22978">SpecIBT: Formally Verified Protection Against Speculative Control-Flow Hijacking</a></b>.
+    Submitted to CSF'26</a>.
+    Draft from Jan 2026.
+    <ul style="font-size: small">
+      <li><a href="https://github.com/secure-compilation/SpecIBT">Rocq development</a></li>
+    </ul>
+  </li>
+
+  <li style="margin-bottom: 1ex;">
     Basile Schlosser,
     Jérémy Thibault, and
     C&#259;t&#259;lin Hri&#539;cu.
